--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel='stylesheet' href='./main.css?version=01'>
   </head>
   <body>
-    <div id="main">
+    <div id="header" class="cont">
+      <b>ALEX BEARRIBLE SIMULATOR</b>
+    </div>
+    <div id="main" class="cont">
       <div id="statusContainer">
         <div id="status"></div>
       </div>
-      <button id="generateBtn">GENERATE RANDOM STATUS!</button>
-      <div id="disclaimer">now whenever you feel like changing your VRC status you can come generate a new one. you might see bad grammar or repeating phrases, sorry for bad english (: --audrey</div>
+      <button id="generateBtn">GENERATE BEARRIBLE BULLSHIT!</button>
+      <div id="disclaimer">click to copy. merry yaoimas and a happy new year (: --audrey</div>
     </div>
     <script type="module" defer src='main.js'></script>
   </body>
