--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <button id="generateBtn">GENERATE BEARRIBLE BULLSHIT!</button>
       <div id="disclaimer">click to copy. merry yaoimas and a happy new year (: --audrey</div>
     </div>
+    <div id="music" class="cont">
+      <button id="musicBtn">HYPERPOP!</button>
+    </div>
     <script type="module" defer src='main.js'></script>
   </body>
 </html>
